testdata/ttcn3-conformance-tests/ATS/json/06_using_ttcn3_as_json_schema/0604_mapping_of_json_values/060401_json_numbers/Neg_0600401_json_numbers_004/Neg_0600401_json_numbers_004.ttcn
/***************************************************
 ** @author   STF 572
 ** @version  0.0.1
 ** @purpose  11:6.4.1, Verify that NaN can not be assigned to a JSON.Number
 ** @verdict  pass reject
 ***************************************************/
/*
 * JSON numbers:
 * 6.4.1: No special values (as –infinity, infinity or NaN) are allowed.
 * */

module Neg_0600401_json_numbers_007 {

    import from JSON all;

    template JSON.Number m_msg := not_a_number;    // error: special float value NaN, not allowed!

}
